refactor: оптимизирован запуск клиентских команд
